# JANGOFETT

./: 235UDetCon.tg  252CfDetCon.tg  CMakeLists.txt  DetCon.tg  GEOMETRYINFO.txt  LICENSE  README.md
include/: Hit.hh  MyDetectorConstruction.hh  MyEventAction.hh  MyEventInformation.hh  MyPrimaryGeneratorAction.hh  MyRunAction.hh  MySteppingAction.hh  StepData.hh
src/: FETTAnalysis.cpp  MyDetectorConstruction.cc  MyEventAction.cc  MyPrimaryGeneratorAction.cc  MyRunAction.cc  MySteppingAction.cc  cgmfToCsv.cpp  main.cc  massExcess.csv  randtimes1.cpp  run_jangofett.sh  shiftTimes.cpp
